# gnosys-treeshell

./: README.md  pyproject.toml
gnosys_treeshell/: __init__.py
gnosys_treeshell.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
gnosys_treeshell/configs/: nav_config.json
gnosys_treeshell/mcp_server/: agent_server.py
mcp_server/: agent_server.py  user_server.py
