[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gnosys-treeshell"
version = "0.1.0"
description = "GNOSYS TreeShell MCP - Tree-based navigation REPL for compound intelligence ecosystem"
readme = "README.md"
license = "LicenseRef-GPBL-1.0"
license-files = ["LICENSE"]
authors = [{name = "Isaac Wright", email = "sancovp@gmail.com"}]
keywords = ["mcp", "treeshell", "claude", "ai", "compound-intelligence"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "heaven-tree-repl>=0.1.0",
    "gnosys-strata>=1.1.0",
    "mcp>=1.0.0",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/sancovp/gnosys-treeshell"
Repository = "https://github.com/sancovp/gnosys-treeshell"
Issues = "https://github.com/sancovp/gnosys-treeshell/issues"

[project.scripts]
gnosys-treeshell = "mcp_server.user_server:serve"

[tool.setuptools.packages.find]
include = ["gnosys_treeshell*", "mcp_server*", "configs*", "families*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json"]
